--- a/scraper/package.json
+++ b/scraper/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
+    "colors": "^1.4.0",
     "diff": "^5.0.0",
     "request": "^2.88.2"
   }
